<resources>
    <string name="app_name">Cryptocurrency Trading Simulator</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_trade">Trade</string>
    <string name="btn_update">Update</string>
    <string name="passed">PASSED</string>
    <string name="failed">FAILED</string>
    <string-array name="yesNo">
        <item></item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>
