<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/container"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Home">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isScrollContainer="false" tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="0dp">


        <LinearLayout
                android:layout_width="368dp"
                android:layout_height="439dp"
                android:orientation="vertical"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp"
                android:gravity="center|bottom">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$126,724.87"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:paddingBottom="150dp"
                    android:paddingTop="10dp"/>


            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:text="Bitcoin"
                            android:textAlignment="center"
                            android:textSize="20sp"/>

                    <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:text="$6,443.01"
                            android:textAlignment="center"
                            android:textSize="20sp"/>

                </TableRow>

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:text="Ethereum"
                            android:textAlignment="center"
                            android:textSize="20sp"/>

                    <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:text="$207.90"
                            android:textAlignment="center"
                            android:textSize="20sp"/>

                </TableRow>

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="198dp"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:text="Ripple"
                            android:textAlignment="center"
                            android:textSize="20sp"/>


                    <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:text="$0.46"
                            android:textAlignment="center"
                            android:textSize="20sp" tools:layout_editor_absoluteY="34dp"
                            tools:layout_editor_absoluteX="92dp"/>

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/navBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:text="@string/title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/homeBtn"/>
        <Button
                android:id="@+id/settingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"
                app:layout_constraintLeft_toRightOf="@+id/homeBtn"
                app:layout_constraintStart_toEndOf="@+id/homeBtn"/>

        <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_search"
                app:layout_constraintLeft_toRightOf="@+id/settingsBtn"
                app:layout_constraintStart_toEndOf="@+id/settingsBtn"/>

        <Button
                android:id="@+id/tradeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_trade"
                app:layout_constraintLeft_toRightOf="@+id/searchBtn"
                app:layout_constraintStart_toEndOf="@+id/searchBtn"/>
    </LinearLayout>

    <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update"
            app:layout_constraintBottom_toTopOf="@+id/navBar"/>


</android.support.constraint.ConstraintLayout>