<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_column="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textSize="20dp"
            android:textAlignment="center"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:stretchColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="New Portfolio Amount"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="$###,###"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Page Refresh rate (sec)"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint=""
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Portfolio Name"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Billy Bob"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Login required"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/yesNo" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginBottom="8dp"
        android:text="Save Setting"
        app:layout_constraintBottom_toTopOf="@+id/navBar" />

    <LinearLayout
            android:id="@+id/navBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:text="@string/title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/homeBtn"/>
        <Button
                android:id="@+id/settingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"
                app:layout_constraintLeft_toRightOf="@+id/homeBtn"
                app:layout_constraintStart_toEndOf="@+id/homeBtn"/>

        <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_search"
                app:layout_constraintLeft_toRightOf="@+id/settingsBtn"
                app:layout_constraintStart_toEndOf="@+id/settingsBtn"/>

        <Button
                android:id="@+id/tradeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_trade"
                app:layout_constraintLeft_toRightOf="@+id/searchBtn"
                app:layout_constraintStart_toEndOf="@+id/searchBtn"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>